gccida/c1/dw2_asm_output_encoded_addr_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dw2_asm_output_encoded_addr_rtx/src/dwarf2asm.c:1338:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dw2_asm_output_encoded_addr_rtx/src/obj/dwarf2asm.o] Error 1
